# SpatialBot_Test

./: .gitignore  README.md  data.json  docker-compose.yaml  pyproject.toml
src/spatialbot_test/: 1_openai_api_request.py  __init__.py  app.py  logique.py  web_app.py
src/spatialbot_test/helpers/: connect_to_db.py
src/spatialbot_test/static/css/: chat.css  style.css
src/spatialbot_test/static/js/: chat.js  map.js
src/spatialbot_test/templates/: index.html
